img/ordering__bg.jpg #	new file:   img/ordering__col1-tel.png
:wq
:q!

--- a/basket.html
+++ b/basket.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title></title>  
-    <link rel="stylesheet" href="css/modal-city.css">
-    <link rel="stylesheet" href="css/style1-wrapper.css">
-    <link rel="stylesheet" href="css/style2-header-wrapper.css">
-    <link rel="stylesheet" href="css/style3-main.css">
-    <link rel="stylesheet" href="css/style4-catalog.css">
-    <link rel="stylesheet" href="css/style5-questions.css">
-    <link rel="stylesheet" href="css/style6-delivery.css">
-    <link rel="stylesheet" href="css/style7-reviews.css">
-    <link rel="stylesheet" href="css/style8-footer.css">
-    <link rel="stylesheet" href="css/_prodact-card/product-card.css">
-    <link rel="stylesheet" href="/css/_basket/basket.css">
-
+    <link rel="stylesheet" href="css/style-general.css">
+  <link rel="stylesheet" href="css/modal-city.css">
+  <link rel="stylesheet" href="css/modal-basket.css">
+  <link rel="stylesheet" href="css/style1-wrapper.css">
+  <link rel="stylesheet" href="css/style2-header-wrapper.css">
+  <link rel="stylesheet" href="css/style3-main.css">
+  <link rel="stylesheet" href="css/style4-catalog.css">
+  <link rel="stylesheet" href="css/style5-questions.css">
+  <link rel="stylesheet" href="css/style6-delivery.css">
+  <link rel="stylesheet" href="css/style7-reviews.css">
+  <link rel="stylesheet" href="css/style8-footer.css">
+  <link rel="stylesheet" href="css/_prodact-card/product-block.css">
+  <link rel="stylesheet" href="css/_prodact-card/similarProducts.css">
+  <link rel="stylesheet" href="css/_prodact-card/viewedProducts.css">
+  <link rel="stylesheet" href="css/_basket/basket.css">
+  <link rel="stylesheet" href="css/_catalog/catalog.css">
+  <link rel="stylesheet" href="css/_otzivi/otzivi.css">
+  <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
+  <link rel="stylesheet" href="css/ordering/ordering.css">
  
 </head>
 <body>
@@ -254,7 +261,7 @@
           <p class="basket__price">Цена</p>
           <p class="basket__kol">Количество</p>
           <p class="basket__itogo">Итого</p>
-          <div class="basket__item"><img src="/img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a></div>
+          <div class="basket__item"><img src="img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a></div>
           <p class="basket__price-number">4 500p</p>
           <div class="quantity__input basket__input">
             <button type="button" class="quantity-minus"></button>
@@ -271,7 +278,7 @@
           <p class="basket__price">Цена</p>
           <p class="basket__kol">Количество</p>
           <p class="basket__itogo">Итого</p>
-          <div class="basket__item"><img src="/img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a></div>
+          <div class="basket__item"><img src="img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a></div>
           <p class="basket__price-number">4 500p</p>
           <div class="quantity__input basket__input">
             <button type="button" class="quantity-minus"></button>
@@ -308,7 +315,7 @@
 
           
          <div class="footer__col footer__col-20">
-              <a class="footer__logo" href="/"><img width="117" src="/img/logo.svg"></a>
+              <a class="footer__logo" href="/"><img width="117" src="img/logo.svg"></a>
               <p><a href="#" class="footer__link">Выберите город.</a> (Внимание! Возможна только доставка - самовывоза нет)
               </p>
             </div>
@@ -359,7 +366,7 @@
           
           <div class="footer__col footer__col-20">
 
-            <img class="footer__ukassa" src="/img/cassa.png" alt="ю-касса">
+            <img class="footer__ukassa" src="img/cassa.png" alt="ю-касса">
             <p class="footer__politic">© 2023 Доставка премиум букетов<br> «Название». Все права защищены.<br> Копирование информации запрещено.</p>
           </div>
           </div>
