--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <title></title>
+  <link rel="stylesheet" href="css/style-general.css">
   <link rel="stylesheet" href="css/modal-city.css">
   <link rel="stylesheet" href="css/modal-basket.css">
   <link rel="stylesheet" href="css/style1-wrapper.css">
@@ -17,13 +18,17 @@
   <link rel="stylesheet" href="css/style6-delivery.css">
   <link rel="stylesheet" href="css/style7-reviews.css">
   <link rel="stylesheet" href="css/style8-footer.css">
-
-
+  <link rel="stylesheet" href="css/_prodact-card/product-block.css">
+  <link rel="stylesheet" href="css/_prodact-card/similarProducts.css">
+  <link rel="stylesheet" href="css/_prodact-card/viewedProducts.css">
+  <link rel="stylesheet" href="css/_basket/basket.css">
+  <link rel="stylesheet" href="css/_catalog/catalog.css">
+  <link rel="stylesheet" href="css/_otzivi/otzivi.css">
+  <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
+  <link rel="stylesheet" href="css/ordering/ordering.css">
 </head>
 
 <body>
-
-  
   <!--style1-wrapper-->
   <div class="wrapper">
     
@@ -645,7 +650,7 @@
 
 
         <div class="footer__col footer__col-20">
-          <a class="footer__logo" href="/"><img width="117" src="/img/logo.svg"></a>
+          <a class="footer__logo" href="/"><img width="117" src="img/logo.svg"></a>
           <p><a href="#" class="footer__link">Выберите город.</a> (Внимание! Возможна только доставка - самовывоза нет)
           </p>
         </div>
@@ -701,7 +706,7 @@
 
         <div class="footer__col footer__col-20">
 
-          <img class="footer__ukassa" src="/img/cassa.png" alt="ю-касса">
+          <img class="footer__ukassa" src="img/cassa.png" alt="ю-касса">
           <p class="footer__politic">© 2023 Доставка премиум букетов<br> «Название». Все права защищены.<br> Копирование
             информации запрещено.</p>
         </div>
@@ -786,7 +791,7 @@
 
 <!--модальное окно корзины-->
 <!--modal-basket.css-->
-<div class="modal" >
+<div class="modal" ><!--добавить класс show и отобразиться-->
   <div class="modal__dialog">
     <div class="basket-modal" >
  
@@ -794,7 +799,7 @@
       <div class="basket-modal__title">
         Корзина </div>
       <div class="good">
-        <img class="good-img" src="/img/product-1.jpg">
+        <img class="good-img" src="img/product-1.jpg">
         <div class="good__text">
           <a href="#" class="good__title">Букет Pink Garden S
           </a>
@@ -825,6 +830,8 @@
 
 
   <script src="js/main.js"></script>
+  
+  <script src="js/main2.js"></script>
 </body>
 
 </html>
