--- a/oplata_dostavka.html
+++ b/oplata_dostavka.html
@@ -18,8 +18,14 @@
   <link rel="stylesheet" href="css/style6-delivery.css">
   <link rel="stylesheet" href="css/style7-reviews.css">
   <link rel="stylesheet" href="css/style8-footer.css">
-  <link rel="stylesheet" href="/css/oplata_dostavka/oplata_dostavka.css">
-
+  <link rel="stylesheet" href="css/_prodact-card/product-block.css">
+  <link rel="stylesheet" href="css/_prodact-card/similarProducts.css">
+  <link rel="stylesheet" href="css/_prodact-card/viewedProducts.css">
+  <link rel="stylesheet" href="css/_basket/basket.css">
+  <link rel="stylesheet" href="css/_catalog/catalog.css">
+  <link rel="stylesheet" href="css/_otzivi/otzivi.css">
+  <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
+  <link rel="stylesheet" href="css/ordering/ordering.css">
 </head>
 
 <body>
@@ -327,7 +333,7 @@
     <div class="container">
       <div class="footer__content">
         <div class="footer__col footer__col-20">
-          <a class="footer__logo" href="/"><img width="117" src="/img/logo.svg"></a>
+          <a class="footer__logo" href="/"><img width="117" src="img/logo.svg"></a>
           <p><a href="#" class="footer__link">Выберите город.</a> (Внимание! Возможна только доставка - самовывоза нет)
           </p>
         </div>
@@ -383,7 +389,7 @@
 
         <div class="footer__col footer__col-20">
 
-          <img class="footer__ukassa" src="/img/cassa.png" alt="ю-касса">
+          <img class="footer__ukassa" src="img/cassa.png" alt="ю-касса">
           <p class="footer__politic">© 2023 Доставка премиум букетов<br> «Название». Все права защищены.<br> Копирование
             информации запрещено.</p>
         </div>
