--- a/otzivi.html
+++ b/otzivi.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title></title>  
-    <link rel="stylesheet" href="css/modal-city.css">
-    <link rel="stylesheet" href="css/style1-wrapper.css">
-    <link rel="stylesheet" href="css/style2-header-wrapper.css">
-    <link rel="stylesheet" href="css/style3-main.css">
-    <link rel="stylesheet" href="css/style4-catalog.css">
-    <link rel="stylesheet" href="css/style5-questions.css">
-    <link rel="stylesheet" href="css/style6-delivery.css">
-    <link rel="stylesheet" href="css/style7-reviews.css">
-    <link rel="stylesheet" href="css/style8-footer.css">
-    <link rel="stylesheet" href="css/product-card.css">
-    <link rel="stylesheet" href="/css/_basket/basket.css">
-    <link rel="stylesheet" href="/css/_catalog/catalog.css">
-    <link rel="stylesheet" href="/css/_otzivi/otzivi.css">
- 
+    <link rel="stylesheet" href="css/style-general.css">
+  <link rel="stylesheet" href="css/modal-city.css">
+  <link rel="stylesheet" href="css/modal-basket.css">
+  <link rel="stylesheet" href="css/style1-wrapper.css">
+  <link rel="stylesheet" href="css/style2-header-wrapper.css">
+  <link rel="stylesheet" href="css/style3-main.css">
+  <link rel="stylesheet" href="css/style4-catalog.css">
+  <link rel="stylesheet" href="css/style5-questions.css">
+  <link rel="stylesheet" href="css/style6-delivery.css">
+  <link rel="stylesheet" href="css/style7-reviews.css">
+  <link rel="stylesheet" href="css/style8-footer.css">
+  <link rel="stylesheet" href="css/_prodact-card/product-block.css">
+  <link rel="stylesheet" href="css/_prodact-card/similarProducts.css">
+  <link rel="stylesheet" href="css/_prodact-card/viewedProducts.css">
+  <link rel="stylesheet" href="css/_basket/basket.css">
+  <link rel="stylesheet" href="css/_catalog/catalog.css">
+  <link rel="stylesheet" href="css/_otzivi/otzivi.css">
+  <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
+  <link rel="stylesheet" href="css/ordering/ordering.css">
 </head>
 <body>
 
@@ -257,7 +262,7 @@
     <div class="otzivi__items">
       <div class="otzivi__item">
         <div class="otziv-info" > 
-          <img class="avatar" alt="" src="/img/otziv.png">   
+          <img class="avatar" alt="" src="img/otziv.png">   
       <div class="autor">
         <a class="otziv-date">07.08.2023</a>
                               <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
@@ -270,16 +275,16 @@
   </div>
 
   <div class="otziv-galery">
-    <img src="/img/otzivi-1.png" alt="фотоотзыв">
-    <img src="/img/otzivi-1.png" alt="фотоотзыв">
-    <img src="/img/otzivi-1.png" alt="фотоотзыв">
+    <img src="img/otzivi-1.png" alt="фотоотзыв">
+    <img src="img/otzivi-1.png" alt="фотоотзыв">
+    <img src="img/otzivi-1.png" alt="фотоотзыв">
   </div>
   <img class="reviews__img" src="img/kawuchki.svg">
   </div>
 
   <div class="otzivi__item">
     <div class="otziv-info" > 
-      <img class="avatar" alt="" src="/img/otziv.png">   
+      <img class="avatar" alt="" src="img/otziv.png">   
   <div class="autor">
     <a class="otziv-date">07.08.2023</a>
                           <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
@@ -292,15 +297,15 @@
 </div>
 
 <div class="otziv-galery">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
 </div>
 <img class="reviews__img" src="img/kawuchki.svg">
 </div>
 <div class="otzivi__item">
   <div class="otziv-info" > 
-    <img class="avatar" alt="" src="/img/otziv.png">   
+    <img class="avatar" alt="" src="img/otziv.png">   
 <div class="autor">
   <a class="otziv-date">07.08.2023</a>
                         <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
@@ -313,9 +318,9 @@
 </div>
 
 <div class="otziv-galery">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
-<img src="/img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
+<img src="img/otzivi-1.png" alt="фотоотзыв">
 </div>
 <img class="reviews__img" src="img/kawuchki.svg">
 </div>
@@ -348,7 +353,7 @@
         <div class="container">
           <div class="footer__content">        
          <div class="footer__col footer__col-20">
-              <a class="footer__logo" href="/"><img width="117" src="/img/logo.svg"></a>
+              <a class="footer__logo" href="/"><img width="117" src="img/logo.svg"></a>
               <p><a href="#" class="footer__link">Выберите город.</a> (Внимание! Возможна только доставка - самовывоза нет)
               </p>
             </div>
@@ -388,7 +393,7 @@
         </div>
           </div>      
           <div class="footer__col footer__col-20">
-            <img class="footer__ukassa" src="/img/cassa.png" alt="ю-касса">
+            <img class="footer__ukassa" src="img/cassa.png" alt="ю-касса">
             <p class="footer__politic">© 2023 Доставка премиум букетов<br> «Название». Все права защищены.<br> Копирование информации запрещено.</p>
           </div>
           </div>
