изменен ordering.html

--- a/ordering.html
+++ b/ordering.html
@@ -357,7 +357,7 @@
                     <a href="#">
                       <div class="ordering__col1-item">
                         <div>
-                          <img src="/img/ordering__col1-whatsApp.png" alt="none">
+                          <img src="img/ordering__col1-whatsApp.png" alt="none">
                         </div>
                         <p>WhatsApp</p>
                       </div>
@@ -365,7 +365,7 @@
                     <a href="#">
                       <div class="ordering__col1-item">
                         <div>
-                          <img src="/img/ordering__col1-tel.png" alt="none">
+                          <img src="img/ordering__col1-tel.png" alt="none">
                         </div>
                         <p>Телефон</p>
                       </div>
