внесены мелкие правки по проекту и при наведении на кнопки и появление модалок сделала более плавное

--- a/catalog.html
+++ b/catalog.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/_otzivi/otzivi.css">
     <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
     <link rel="stylesheet" href="css/ordering/ordering.css">
+    <link rel="stylesheet" href="css/_our_contacts/our_contacts.css">
  
 </head>
 <body>
@@ -49,13 +50,10 @@
                      <img src="img/geo.svg" alt="geo">
                       <div class="header__callback-geomarcker">Екатеринбург</div>
                   </a>
-  
                   <div class="header__phone header__firminfo">  <img src="img/tel.svg" alt="tel">
                       <a class="header__phone-link" href="tel:89500265041">8 950 026 50 41</a>
                   </div>
-  
   </div>
-
                 <div class="header__socials">
                     <a class="header__socials-inst" href="#" target="_blank"><img src="img/inst.svg"  alt="инстаграм" ></a>                    
                     <a class="header__socials-telegram" href="#" target="_blank"><img src="img/telegr.svg"  alt="телеграм" ></a>
@@ -248,6 +246,8 @@
 
   </div>
 </div>
+
+<!--css/catalog.css-->
 <section class="catalog section-page">
   <div class="container">
     <nav class="breadcrumb breadcrumb-active breadcrumb-active-notMobile"><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">&gt;</span>&nbsp;&nbsp;<a class="breadcrumb-active" href="#">Розы
