--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/_otzivi/otzivi.css">
   <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
   <link rel="stylesheet" href="css/ordering/ordering.css">
+  <link rel="stylesheet" href="css/_our_contacts/our_contacts.css">
 </head>
 
 <body>
@@ -466,7 +467,7 @@
         <h2>Частые вопросы</h2>
       </div>
 
-      <div id="block1" class="faq">
+      <div id="block1" data-target="content1" class="faq">
         <span class="title" data-target="content1">Почему 90% клиентов заказывают именно у нас?</span>
         <div class="faq-btn" data-target="content1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="9"
             viewBox="0 0 16 9" fill="none">
@@ -482,7 +483,7 @@
         вручения.</div>
 
 
-      <div id="block2" class="faq">
+      <div id="block2" data-target="content2" class="faq">
         <span class="title" data-target="content2">Есть готовые букеты в наличии?</span>
         <div class="faq-btn" data-target="content2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="9"
             viewBox="0 0 16 9" fill="none">
@@ -499,7 +500,7 @@
 
 
 
-      <div id="block3" class="faq">
+      <div id="block3" data-target="content3" class="faq">
         <span class="title" data-target="content3">Почему 90% клиентов заказывают именно у нас?</span>
         <div class="faq-btn" data-target="content3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="9"
             viewBox="0 0 16 9" fill="none">
@@ -514,7 +515,7 @@
         Доставим сюрприз, зная только номер получателя или страницу в соцсети, при этом не раскроем секрет до момента
         вручения.</div>
 
-      <div id="block4" class="faq">
+      <div id="block4" data-target="content4" class="faq">
         <span class="title" data-target="content4">Почему 90% клиентов заказывают именно у нас?</span>
         <div class="faq-btn" data-target="content4"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="9"
             viewBox="0 0 16 9" fill="none">
@@ -783,9 +784,6 @@
     </button>
     </div>
   </div>
-
-   
-  
 </div>
 
 
