--- a/ordering.html
+++ b/ordering.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="css/_otzivi/otzivi.css">
   <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
   <link rel="stylesheet" href="css/ordering/ordering.css">
+  <link rel="stylesheet" href="css/_our_contacts/our_contacts.css">
 </head>
 
 <body>
@@ -297,9 +298,7 @@
 
   <section class="ordering section-page">
     <div class="container">
-      <nav class="breadcrumb"><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a
-          href="#">Оформление заказа
-        </a></nav>
+      <nav class="breadcrumb breadcrumb-active "><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a  class="breadcrumb-active" href="#">Оформление заказа</a></nav>
       <h1 class="page-title">Оформление заказа</h1>
 
       <div class="ordering__preview">
