--- a/our_contacts.html
+++ b/our_contacts.html
@@ -249,107 +249,68 @@
   </div>
 </div>
 
-
-<!--otzivi.css-->
-<section class="otzivi section-page">
+<!--css/_our_contacts/our_contacts.css-->
+<section class="contacts section-page">
   <div class="container">
-    <nav class="breadcrumb breadcrumb-active "><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a  class="breadcrumb-active" href="#">Отзывы</a></nav>
-    <h1 class="page-title">Отзывы</h1>
-  
-
-<div class="otzivi-pulquote">
-<p class="text">Для нас очень важно Ваше мнение, ведь благодаря вашим отзывам мы становимся лучше и вдохновляемся на дальнейшее развитие в сфере цветов и подарков!</p>
-<a href="#" class="btn btn-gradient">Оставить отзыв</a>
-
-</div>
-    <div class="otzivi__items">
-      <div class="otzivi__item">
-        <div class="otziv-info" > 
-          <img class="avatar" alt="" src="img/otziv.png">   
-      <div class="autor">
-        <a class="otziv-date">07.08.2023</a>
-                              <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
-      </div>
-          </div>
-      <div class="otziv__content" >
-                              Здравствуйте всем, кто читает раздел отзывы! Я Хочу поблагодарить команду организации Камелия! 🙏🏻 Очень быстро и оперативно отреагировали на мой запрос, день в день, организовать доставку корзины с фруктами и цветами моей маме. Я их другого города, за 10000 км.. боялась что не смогу сделать приятный сюрприз маме, но нет! Всё получилось! 😻 Спасибо ещё раз, команде КАМЕЛИЯ за оперативность, понимание, и желание помочь каждому клиенту ☺️🫂❤️🔥🫶🏻
-                      <div>
-                      </div>
-  </div>
-
-  <div class="otziv-galery">
-    <img src="img/otzivi-1.png" alt="фотоотзыв">
-    <img src="img/otzivi-1.png" alt="фотоотзыв">
-    <img src="img/otzivi-1.png" alt="фотоотзыв">
-  </div>
-  <img class="reviews__img" src="img/kawuchki.svg">
-  </div>
-
-  <div class="otzivi__item">
-    <div class="otziv-info" > 
-      <img class="avatar" alt="" src="img/otziv.png">   
-  <div class="autor">
-    <a class="otziv-date">07.08.2023</a>
-                          <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
-  </div>
-      </div>
-  <div class="otziv__content" >
-                          Здравствуйте всем, кто читает раздел отзывы! Я Хочу поблагодарить команду организации Камелия! 🙏🏻 Очень быстро и оперативно отреагировали на мой запрос, день в день, организовать доставку корзины с фруктами и цветами моей маме. Я их другого города, за 10000 км.. боялась что не смогу сделать приятный сюрприз маме, но нет! Всё получилось! 😻 Спасибо ещё раз, команде КАМЕЛИЯ за оперативность, понимание, и желание помочь каждому клиенту ☺️🫂❤️🔥🫶🏻
-                  <div>
-                  </div>
-</div>
-
-<div class="otziv-galery">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-</div>
-<img class="reviews__img" src="img/kawuchki.svg">
-</div>
-<div class="otzivi__item">
-  <div class="otziv-info" > 
-    <img class="avatar" alt="" src="img/otziv.png">   
-<div class="autor">
-  <a class="otziv-date">07.08.2023</a>
-                        <a class="autor__name" href="https://vk.com/id135531276" target="_blank">Юлия Силаева</a>                          
-</div>
-    </div>
-<div class="otziv__content" >
-                        Здравствуйте всем, кто читает раздел отзывы! Я Хочу поблагодарить команду организации Камелия! 🙏🏻 Очень быстро и оперативно отреагировали на мой запрос, день в день, организовать доставку корзины с фруктами и цветами моей маме. Я их другого города, за 10000 км.. боялась что не смогу сделать приятный сюрприз маме, но нет! Всё получилось! 😻 Спасибо ещё раз, команде КАМЕЛИЯ за оперативность, понимание, и желание помочь каждому клиенту ☺️🫂❤️🔥🫶🏻
-                <div>
+    <nav class="breadcrumb breadcrumb-active breadcrumb-active-notMobile"><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">&gt;</span>&nbsp;&nbsp;<a class="breadcrumb-active" href="#">Контакты
+    </a></nav>
+    <h1 class="page-title">Наши контакты</h1>
+        <div class="contacts__body">
+            <div class="contacts__carts">
+           
+              <div class="contacts__cart" >
+                <img class="img-icon" src="/img/contacts-tel.png">
+                <div class="contacts__info">
+                <div class="contacts__cart-title">Телефон</div>
+             <a href="tel:89270833305" target="_blank" class="contacts__cart-tel">8 950 026 50 41</a>
+                <p>(звонки с 10:00 до 19:00)</p>
+                <div class="contacts__cart-online">Приём заказов онлайн <span>24/7</span></div>
+                <div class="contacts__cart-social">
+                  <a href="#"><img src="/img/contacts__cart-instagram.png" alt="instagram"></a>
+                  <a href="#"><img src="/img/contacts__cart-whatsApp.png" alt="whatsApp"></a>
+                  <a href="#"><img src="/img/contacts__cart-vk.png" alt="vk"></a>
+                  <a href="#"><img src="/img/contacts__cart-telega.png" alt="telega"></a>
                 </div>
-</div>
+              </div>
+              </div>
+              <div class="contacts__cart">
+                <img src="/img/contacts-geo.png">
+                <div class="contacts__info">
+                <div class="contacts__cart-title">Адрес</div>
+                <div class="contacts__cart-adres">г. Абакан, ул. Крылова, д. 66Б.</div>
+                <div class="contacts__cart-description">(Внимание! Возможна только доставка – самовывоза нет)</div>
+              </div>
+              </div>
+              <div class="contacts__cart">
+                <img src="/img/contacts-mail.png">
+                <div class="contacts__info">
+                <div class="contacts__cart-title">Email</div>
+                <div class="contacts__cart-adres">amour@yandex.ru</div>
+                <div class="contacts__cart-description">(Пишите нам по любым вопросам)</div>
+              </div>
+              </div>
+              
+          </div>
+            <div class="contacts__requisites">
+              <div class="contacts__requisites-title">
+                Реквизиты:
+              </div>
+              <p class="contacts__requisites-description">
+                Самозанятая Хабибуллина Гульнара Халитовна.
+                ИНН: 026410189650
+              </p>
+              <p>Самозанятый Сафаров Анвар Вахитович.
+                ИНН: 023701052735
+              </p>
+              <p>ИП Хабибуллин Ильнур Халитович (агрегатор).
+                ИНН 026410183707 / ОГРНИП 318028000038613
+              </p>
+            </div>
+        </div>
 
-<div class="otziv-galery">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-<img src="img/otzivi-1.png" alt="фотоотзыв">
-</div>
-<img class="reviews__img" src="img/kawuchki.svg">
-</div>
-  
   </div>
-  <div class="btn-block otzivi__btn-midle" > <a href="#" class="btn btn-gradient">Читать все отзывы</a></div>
-
-
-
   </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!--style8-footer-->
       <footer class="footer section">
