--- a/product-card.html
+++ b/product-card.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/_otzivi/otzivi.css">
     <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
     <link rel="stylesheet" href="css/ordering/ordering.css">
+    <link rel="stylesheet" href="css/_our_contacts/our_contacts.css">
 </head>
 <body>
 
@@ -253,9 +254,7 @@
   </div>
 </div>
 
-<!--style3-main-->
-
-
+<!--css/_product-card/product-block.css-->
 <section class="section product-block">
 <div class="container">
 
