--- a/oplata_dostavka.html
+++ b/oplata_dostavka.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="css/_otzivi/otzivi.css">
   <link rel="stylesheet" href="css/oplata_dostavka/oplata_dostavka.css">
   <link rel="stylesheet" href="css/ordering/ordering.css">
+  <link rel="stylesheet" href="css/_our_contacts/our_contacts.css">
 </head>
 
 <body>
@@ -297,9 +298,7 @@
   <section class="dostavkaoplata section-page">
      <!--oplata_dostavka-->
     <div class="container">
-      <nav class="breadcrumb"><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a href="#">Доставка и оплата
-      </a></nav>
-
+      <nav class="breadcrumb breadcrumb-active "><a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a  class="breadcrumb-active" href="#">Оплата и доставка</a></nav>
       <div class="dostavka">
 <h1 class="page-title">Доставка</h1>
 
