внесены правки в страницу контакты и в css

--- a/our_contacts.html
+++ b/our_contacts.html
@@ -248,7 +248,6 @@
 
   </div>
 </div>
-
 <!--css/_our_contacts/our_contacts.css-->
 <section class="contacts section-page">
   <div class="container">
@@ -259,22 +258,22 @@
             <div class="contacts__carts">
            
               <div class="contacts__cart" >
-                <img class="img-icon" src="/img/contacts-tel.png">
+                <img class="img-icon" src="img/contacts-tel.png">
                 <div class="contacts__info">
                 <div class="contacts__cart-title">Телефон</div>
              <a href="tel:89270833305" target="_blank" class="contacts__cart-tel">8 950 026 50 41</a>
                 <p>(звонки с 10:00 до 19:00)</p>
                 <div class="contacts__cart-online">Приём заказов онлайн <span>24/7</span></div>
                 <div class="contacts__cart-social">
-                  <a href="#"><img src="/img/contacts__cart-instagram.png" alt="instagram"></a>
-                  <a href="#"><img src="/img/contacts__cart-whatsApp.png" alt="whatsApp"></a>
-                  <a href="#"><img src="/img/contacts__cart-vk.png" alt="vk"></a>
-                  <a href="#"><img src="/img/contacts__cart-telega.png" alt="telega"></a>
+                  <a href="#"><img src="img/contacts__cart-instagram.png" alt="instagram"></a>
+                  <a href="#"><img src="img/contacts__cart-whatsApp.png" alt="whatsApp"></a>
+                  <a href="#"><img src="img/contacts__cart-vk.png" alt="vk"></a>
+                  <a href="#"><img src="img/contacts__cart-telega.png" alt="telega"></a>
                 </div>
               </div>
               </div>
               <div class="contacts__cart">
-                <img src="/img/contacts-geo.png">
+                <img src="img/contacts-geo.png">
                 <div class="contacts__info">
                 <div class="contacts__cart-title">Адрес</div>
                 <div class="contacts__cart-adres">г. Абакан, ул. Крылова, д. 66Б.</div>
@@ -282,7 +281,7 @@
               </div>
               </div>
               <div class="contacts__cart">
-                <img src="/img/contacts-mail.png">
+                <img src="img/contacts-mail.png">
                 <div class="contacts__info">
                 <div class="contacts__cart-title">Email</div>
                 <div class="contacts__cart-adres">amour@yandex.ru</div>
