форматнула html код спомощью плагина в visual studio code/навела порядок,добавила в каталог заголовок фильтр товаров и редактировала catalog.scss стилизовала данный заголовок

--- a/index.html
+++ b/index.html
@@ -655,7 +655,6 @@
           <p><a href="#" class="footer__link">Выберите город.</a> (Внимание! Возможна только доставка - самовывоза нет)
           </p>
         </div>
-
         <div class="footer__col footer__col-20">
           <p>
             <span class="footer__muted">Звонки</span> с 10:00 до 19:00 - <br><a href="tel:89270833305" target="_blank"
@@ -673,9 +672,6 @@
             <a href="#"><img src="img/vk.svg"></a>
           </div>
         </div>
-
-
-
 
 
         <div class="footer__content-40">
@@ -791,45 +787,34 @@
 <!--modal-basket.css-->
 <div class="modal" ><!--добавить класс show и отобразиться-->
   <div class="modal__dialog">
-    <div class="basket-modal" >
- 
+    <div class="basket-modal">
     <div class="basket-modal__content">
       <div class="basket-modal__title">
         Корзина </div>
       <div class="good">
         <img class="good-img" src="img/product-1.jpg">
         <div class="good__text">
-          <a href="#" class="good__title">Букет Pink Garden S
-          </a>
-          <div class="good__price"><span>1</span> * <span>2500</span><span
-              class="woocommerce-Price-currencySymbol">₽</span></div>
+          <a href="#" class="good__title">Букет Pink Garden S</a>
+          <div class="good__price"><span>1</span> * <span>2500</span>
+            <span class="woocommerce-Price-currencySymbol">₽</span></div>
         </div>
       </div>
-      <div class="basket-modal__total">Подытог: <span>2 500 </span><span
-          class="woocommerce-Price-currencySymbol">₽</span></div>
-
-      <div class="basket-modal__btn">
-        <a href="/podobrat/" class="btn btn-gradient">Просмотр корзины</a>
-        <a href="/podobrat/" class="btn btn-light">Оформление заказа</a>
+      <div class="basket-modal__total">Подытог: <span>2 500 </span>
+        <span class="woocommerce-Price-currencySymbol">₽</span>
       </div>
-
+      <div class="basket-modal__btn">
+      <a href="/podobrat/" class="btn btn-gradient">Просмотр корзины</a>
+      <a href="/podobrat/" class="btn btn-light">Оформление заказа</a>
+      </div>
       <button class="modal__close" data-close><svg xmlns="http://www.w3.org/2000/svg" fill="#cc9744" 
         viewBox="0 0 24 24">
-        <path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path>
-      </svg>
+        <path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path></svg>
     </button>
     </div>
-
   </div>
 </div>
-
 </div>
-
-
-
   <script src="js/main.js"></script>
-  
   <script src="js/main2.js"></script>
 </body>
-
 </html>
