--- a/basket.html
+++ b/basket.html
@@ -287,12 +287,48 @@
                     <a href="#">Главная</a>&nbsp;&nbsp;<span class="wci-chevron-right">></span>&nbsp;&nbsp;<a class="breadcrumb-active" href="#">Корзина</a>
                 </nav>
                 <h1 class="page-title">Корзина</h1>
-                <div class="basket__container">
-                    <div class="basket__items">
-                        <div class="basket__wrapper">
-                            <p class="basket__price basket__title">Цена</p>
-                            <p class="basket__kol basket__title">Количество</p>
-                            <p class="basket__itogo basket__title">Итого</p>
+                <div class="basket__container">          
+                    <div class="basket__items">             
+                <div class="basket__header">
+                    <p class="basket__price basket__title">Цена</p>
+                    <p class="basket__kol basket__title">Количество</p>
+                    <p class="basket__itogo basket__title">Итого</p>
+                </div>
+                      <!-- <table style="width: 100%;">
+                        <colgroup>
+                          <col span="2" >
+                          <col >
+                        </colgroup>
+                        <tr>
+                            <th>
+    
+                            </th>
+                            <th></th>
+                          <th> <p class="basket__price basket__title">Цена</p></th>
+                      
+                          <th> <p class="basket__kol basket__title">Количество</p></th>
+                          <th> <p class="basket__kol basket__title">Итого</p></th>
+                        </tr>
+                        <tr>
+                          <td> <div class="basket__item"><img src="img/similarProducts__item.jpg" alt="">
+                          </div></td>
+                          <td><a href="#">Название букета Pink Garden S</a></td>
+                          <td>   <p class="basket__price-number">4 500p</p></td>
+                          <td>   <div class="quantity__input basket__input">
+                            <button type="button" class="quantity-minus"></button>
+                            <input type="number" id="quantity_64cf5cac05243" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Кол-во" size="4" placeholder="" inputmode="numeric">
+                            <button type="button" class="quantity-plus"></button>
+                        </div></td>
+                          <td>  <p class="basket__itogo-number">4 500p</p></td>
+                         <td>        <button type="button" class="basket__close" data-close>
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1" fill="#cc9744" viewbox="0 0 24 24">
+                                <path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path>
+                            </svg>
+                        </button>
+                        <hr></td>
+                        </tr>
+                      </table>-->   
+                   <div class="basket__wrapper">
                             <div class="basket__item"><img src="img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a>
                             </div>
                             <p class="basket__price-number">4 500p</p>
@@ -301,20 +337,22 @@
                                 <input type="number" id="quantity_64cf5cac05243" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Кол-во" size="4" placeholder="" inputmode="numeric">
                                 <button type="button" class="quantity-plus"></button>
                             </div>
+                            <div class="basket__header">
+                                <p class="basket__price basket__title">Цена</p>
+                                <p class="basket__kol basket__title">Количество</p>
+                                <p class="basket__itogo basket__title">Итого</p>
+                            </div>
+
                             <p class="basket__itogo-number">4 500p</p>
                             <button type="button" class="basket__close" data-close>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1" fill="#cc9744" viewbox="0 0 24 24">
                                     <path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path>
                                 </svg>
-                            </button>
+                            </button>                          
                             <hr>
-
                         </div>
 
                         <div class="basket__wrapper">
-                            <p class="basket__price basket__title">Цена</p>
-                            <p class="basket__kol basket__title">Количество</p>
-                            <p class="basket__itogo basket__title">Итого</p>
                             <div class="basket__item"><img src="img/similarProducts__item.jpg" alt=""><a href="#">Название букета Pink Garden S</a>
                             </div>
                             <p class="basket__price-number">4 500p</p>
@@ -323,12 +361,18 @@
                                 <input type="number" id="quantity_64cf5cac05243" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="Кол-во" size="4" placeholder="" inputmode="numeric">
                                 <button type="button" class="quantity-plus"></button>
                             </div>
+                            <div class="basket__header">
+                                <p class="basket__price basket__title">Цена</p>
+                                <p class="basket__kol basket__title">Количество</p>
+                                <p class="basket__itogo basket__title">Итого</p>
+                            </div>
+
                             <p class="basket__itogo-number">4 500p</p>
                             <button type="button" class="basket__close" data-close>
                                 <svg xmlns="http://www.w3.org/2000/svg" version="1" fill="#cc9744" viewbox="0 0 24 24">
                                     <path d="M13 12l5-5-1-1-5 5-5-5-1 1 5 5-5 5 1 1 5-5 5 5 1-1z"></path>
                                 </svg>
-                            </button>
+                            </button>                          
                             <hr>
                         </div>
                     </div>
