--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         <div
             class="modal">
             <!--добавить класс show и отобразиться-->
-            <div class="modal__dialog">
+            <div class="modal__dialog show">
                 <div class="basket-modal">
                     <div class="basket-modal__content">
                         <div class="basket-modal__title">
